# gameOfLifeCpp

./: .gitignore  CMakeLists.txt  Color.cpp  Color.h  Display.cpp  Display.h  GameOfLife.cpp  Grid.cpp  Grid.h  GridDrawer.cpp  GridDrawer.h  Noncopyable.cpp  Noncopyable.h  Pattern.cpp  Pattern.h  PatternLoader.cpp  PatternLoader.h  README.md  Simulation.cpp  Simulation.h  main.cpp
